crates/aiguard-adapter-shellhook/tests/snapshots/snapshot_tests__crush_snake_case_event.snap
---
source: crates/aiguard-adapter-shellhook/tests/snapshot_tests.rs
assertion_line: 255
expression: "json!({\n    \"event_type\": format!(\"{:?}\", event.event_type), \"tool_name\":\n    event.tool_name,\n})"
---
event_type: PreToolUse
tool_name: edit
