crates/aiguard-adapter-shellhook/tests/snapshots/snapshot_tests__gemini_before_tool.snap
---
source: crates/aiguard-adapter-shellhook/tests/snapshot_tests.rs
assertion_line: 179
expression: "json!({\n    \"session_id\": event.session_id, \"event_type\":\n    format!(\"{:?}\", event.event_type), \"tool_name\": event.tool_name,\n})"
---
event_type: PreToolUse
session_id: gem-sess
tool_name: run_shell_command
