crates/aiguard-adapter-shellhook/tests/snapshots/snapshot_tests__gemini_resp_approve.snap
---
source: crates/aiguard-adapter-shellhook/tests/snapshot_tests.rs
assertion_line: 206
expression: "json!({\"body\": json, \"exit_code\": code})"
---
body:
  decision: approve
  hookSpecificOutput: {}
exit_code: 0
