crates/aiguard-adapter-shellhook/tests/snapshots/snapshot_tests__gemini_resp_deny.snap
---
source: crates/aiguard-adapter-shellhook/tests/snapshot_tests.rs
assertion_line: 215
expression: "json!({\"body\": json, \"exit_code\": code})"
---
body:
  decision: deny
  hookSpecificOutput:
    reason: path /etc/passwd denied
exit_code: 2
